--- a/watch/app/src/main/AndroidManifest.xml
+++ b/watch/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:theme="@style/Theme.Sibal"
         tools:targetApi="31">
         <activity
+            android:name=".activity.main.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.main.AuthActivity"
             android:exported="false" />
         <activity
