:sparkles: feat : feign 경로 추가

--- a/exercise-record-service/src/main/resources/application.yml
+++ b/exercise-record-service/src/main/resources/application.yml
@@ -41,3 +41,15 @@ springdoc:
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
+
+feign:
+  member-service:
+    url:
+  inventory-service:
+    url:
+  program-service:
+    url:
+  exercise-record-service:
+    url:
+  challenge-service:
+    url:
