--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.18.1
   fluttertoast: ^8.0.8 #토스트보여주는 라이브러리
   flutter_slidable: ^0.6.0 #슬라이드 해서 삭제버튼 띄우는 라이브러리
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
