:sparkles: feat : 일정시간 미접속 시 애정도 하락 로직 추가, 배포환경에서는 자정마다 실행. 로컬에서는 30초마다 실행

--- a/exercise-record-service/src/main/resources/application-prod.yml
+++ b/exercise-record-service/src/main/resources/application-prod.yml
@@ -46,3 +46,7 @@ feign:
     url: http://exercise-record-service.exercise-record.svc.cluster.local
   challenge-service:
     url: http://challenge-service.challenge.svc.cluster.local
+
+scheduler:
+  cron:
+    expression: "0 0 0 * * ?" # 매일 자정에 실행
