:sparkles: feat : 로컬에서도 자정마다 실행

--- a/exercise-record-service/src/main/resources/application.yml
+++ b/exercise-record-service/src/main/resources/application.yml
@@ -56,4 +56,4 @@ feign:
 
 scheduler:
   cron:
-    expression: "*/30 * * * * ?" # 개발 환경에서는 30초마다 실행
+    expression: "0 0 0 * * ?" # 자정마다 실행, "*/30 * * * * ?" # 30초마다 실행
