--- a/watch/app/src/main/AndroidManifest.xml
+++ b/watch/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sibal"
         tools:targetApi="31">
+        <service
+            android:name=".activity.tactivity.TimeTargetService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".activity.main.HomeActivity"
             android:exported="false" />
@@ -46,9 +51,9 @@
             android:name=".activity.iactivity.IRunningService"
             android:exported="false"> <!-- or false, depending on whether you want the service to be accessible from other apps -->
         </service>
-        <service android:name=".activity.iactivity.IntervalService"
-            android:exported="false">
-        </service>
+        <service
+            android:name=".activity.iactivity.IntervalService"
+            android:exported="false" />
 
         <activity
             android:name=".activity.CountdownActivity"
