:sparkles: feat : 운동 중 화면(D, T) 구성

--- a/watch/app/src/main/AndroidManifest.xml
+++ b/watch/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:enabled="true"
             android:exported="true"></service>
 
+        <!--        <activity-->
+        <!--            android:name=".activity.walkandrun.run.OnlyRunActivity"-->
+        <!--            android:exported="false" />-->
         <activity
             android:name=".activity.main.HomeActivity"
             android:exported="false" />
