--- a/watch/app/src/main/AndroidManifest.xml
+++ b/watch/app/src/main/AndroidManifest.xml
@@ -25,9 +25,13 @@
         android:theme="@style/Theme.Sibal"
         tools:targetApi="31">
         <service
-            android:name=".activity.tactivity.TimeTargetService"
+            android:name=".activity.dactivity.DistTargetService"
             android:enabled="true"
             android:exported="true"></service>
+        <service
+            android:name=".activity.tactivity.TimeTargetService"
+            android:enabled="true"
+            android:exported="true" />
 
         <!--        <activity-->
         <!--            android:name=".activity.walkandrun.run.OnlyRunActivity"-->
