--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,10 +44,15 @@ dependencies:
   go_router: ^14.0.2
   flutter_secure_storage: ^9.0.0 # 로그인유지 및 토큰 저장을 위한 라이브러리
   jwt_decode: ^0.3.1 # 일단 해야함
-  intl: ^0.18.1
+  intl: any
   fluttertoast: ^8.0.8 #토스트보여주는 라이브러리
   flutter_slidable: ^0.6.0 #슬라이드 해서 삭제버튼 띄우는 라이브러리
   table_calendar: ^3.0.9
+  firebase_messaging: ^14.9.2
+  flutter_local_notifications: ^17.1.2
+  firebase_core: ^2.31.0
+  googleapis_auth: ^1.4.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +82,7 @@ flutter:
     - assets/item_tier/
     - assets/item/
     - assets/dogs/
+    - assets/data/
 
   fonts:
     - family: TheJamsil
